--- a/src/styles/creators/pages/editchannelcontent.css
+++ b/src/styles/creators/pages/editchannelcontent.css
@@ -30,6 +30,8 @@
         align-items: center;
         justify-content: center;
         text-align: center;
+
+        padding: 1rem;
     }
 
     .module-select-screeen
